--- a/Tema3.Rmd
+++ b/Tema3.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Tema 3"
 subtitle: Tratamiento de Datos. Grado en Ciencia de Datos- UV
-author: "Marcelino Martínez"
+author: "Sandra López Llorens"
 date:  "`r Sys.Date()`"  #Pondría la fecha del día actual
  
 params:
